tdf#113608 DOCX import: don't use numbering of removed paragraphs

to avoid direct numbering of the unnumbered paragraphs later
using numbering of the removed w:r-less paragraph incorrectly.

Test file and clean up by Justin Luth.

Change-Id: I821eed11f96e56e945aa88da03cc84e29322195a