writerfilter/source/dmapper/DomainMapper_Impl.hxx
@@ -626,7 +626,7 @@ public:
     void setParaSdtEndDeferred(bool bParaSdtEndDeferred);
     bool isParaSdtEndDeferred();
 
-    void finishParagraph( const PropertyMapPtr& pPropertyMap );
+    void finishParagraph( const PropertyMapPtr& pPropertyMap, const bool bRemove = false);
     void appendTextPortion( const OUString& rString, const PropertyMapPtr& pPropertyMap );
     void appendTextContent(const css::uno::Reference<css::text::XTextContent>&, const css::uno::Sequence<css::beans::PropertyValue>&);
     void appendOLE( const OUString& rStreamName, const std::shared_ptr<OLEHandler>& pOleHandler );
